--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -15,6 +15,10 @@ jobs:
         with:
           python-version: 3.10.4
 
+      - name: Combine
+        run: |
+            make
+
       - name: Deploy MkDocs
         uses: mhausenblas/mkdocs-deploy-gh-pages@1.26
       
